2009-10-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Some prerequisites for crawler driving.

	* Glasses/XXXCart.cxx:
	* Glasses/XXXCart.h:
	New glass to hold future experimental code.

	* Glasses/Crawler.h:
	Reduce maximum levitation-height.

	* Glasses/Tringula.cxx:
	* Glasses/Tringula.h:
	Add RegisterCrawler() so that one can register a Crawler of
	different sub-class.
	Most functions with Dynamico in their name should use Crawler
	instead.

	* glass.list:
	Add XXXCart.

2009-09-20  Matevz Tadel  <matevz.tadel@ijs.si>

	Some fiddling with key controllers.

	* Glasses/TringuCam.cxx:
	* Glasses/TringuCam.h:
	In ValueInfo add support for sustained values - where key press
	increases the value and it remains at this level until decreased
	with the opposing key.
	This is meant for something like throttle control. Tried it with
	forward-backwards controls but would need to be tuned for this usage.

	* Stones/VelocityVar.cxx:
	* Stones/VelocityVar.h:
	New stone for holding of a velocity variable.
	Preliminary - only contains some comments.

	* Opcode/Ice/IceMatrix3x3.cpp:
	Somewhat optimize FromTo() function.

2009-05-17  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac compilation changes.

	* Glasses/TriMeshField.cxx:
	Add missing include (for mac).

	* Makefile:
	Generalize glib-2.0 pkg-config invocation for cppflags.
	Simplify target for building of libOpcode and make it
	cross-platform.

	* Opcode/Makefile:
	Import central make_config and make_defs. Use stuff from there to
	properly build on mac.

	* Stones/HTrans.h:
	Explicit template instantiation causes trouble on mac.
	Need to see with Axel.

2009-05-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for dynamico/crawler movement handling.

	* Glasses/Crawler.cxx:
	Reactivate increase in ray-offset when terrain ray-touching fails,
	but only when f,g coordinates are still within the limits of
	parametric surface.
	Otherwise park the bastard and dump a warning.

	* Glasses/Dynamico.cxx:
	* Glasses/Dynamico.h: